--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Notes Generator</title>
+    <title>AI Study Notes Maker</title>
 </head>
-<body style="margin: 0; overflow: hidden;">
-    <iframe src="https://abhaykoul-auto-study-notes-maker.hf.space" width="100%" height="100%" frameborder="0"></iframe>
+<body>
+
+<!-- Embedding the specified URL using an iframe -->
+<iframe src="https://abhaykoul-auto-study-notes-maker.hf.space" style="width: 100%; height: 100vh; border: none;"></iframe>
+
 </body>
 </html>
